--- a/action.yml
+++ b/action.yml
@@ -10,8 +10,8 @@ inputs:
   patch-pattern:
     description: 'Regex pattern for detecting patch number bum up'
     required: false
-  last-tag-pattern:
-    description: 'Glob pattern for matching last version tag'
+  version-tag-prefix:
+    description: 'Prefix of version tag. Empty by default'
     required: false
   output-to-env-variable:
     description: 'The environment variable to store the result'
